--- a/CrossWordPainter/ShellView.xaml
+++ b/CrossWordPainter/ShellView.xaml
@@ -6,22 +6,33 @@
         mc:Ignorable="d"
         Title="ShellView" WindowState="Maximized">
     <DockPanel>
-        <GroupBox DockPanel.Dock="Left" Width="300">
-            <DockPanel >
-                <Button DockPanel.Dock="Bottom" Name="Close" IsCancel="True" Height="22" Width="120" Margin="0, 30">Закрыть</Button>
+        <DockPanel Dock="Left" Width="300">
+            <GroupBox DockPanel.Dock="Bottom" >
+                <Button Name="Close" IsCancel="True" Height="22" Width="120" Margin="0, 20">Закрыть</Button>
+            </GroupBox>
+            <GroupBox DockPanel.Dock="Top" >
                 <StackPanel HorizontalAlignment="Left">
                     <TextBox Name="FileNameTextBlock" Text="{Binding SelectedFile}" IsReadOnly="True"
-                             Height="22" Width="280" Margin="0, 20, 0, 10" TextChanged="TextBox_TextChanged"/>
+                                 Height="22" Width="280" Margin="0, 20, 0, 10" TextChanged="TextBox_TextChanged"/>
                     <Button Name="SelectFile" Content="Выбрать файл" Height="22" Width="120" Margin="0" HorizontalAlignment="Left"/>
                 </StackPanel>
-            </DockPanel>
-        </GroupBox>
+            </GroupBox>
+            <GroupBox DockPanel.Dock="Top">
+                <DockPanel Margin="0,5">
+                    <TextBlock DockPanel.Dock="Bottom" Background="AliceBlue" Text="{Binding Message}" Margin="0, 5"/>
+                    <Button DockPanel.Dock="Left" Name="Compose" Content="Составить" Height="22" Width="120" Margin="0, 5"/>
+                    <Button Name="Interrupt" Content="Прервать" 
+                            Height="22" Width="120" Margin="0, 5" HorizontalAlignment="Right"/>
+                </DockPanel>
+            </GroupBox>
+            <StackPanel></StackPanel>
+        </DockPanel>
 
         <GroupBox>
             <StackPanel Name="LeftPanel" Background="Gray" Margin="0, 5,0,0">
 
             </StackPanel>
         </GroupBox>
-      
+
     </DockPanel>
 </Window>
