--- a/CrossWord/ShellView.xaml
+++ b/CrossWord/ShellView.xaml
@@ -10,6 +10,12 @@
             <GroupBox DockPanel.Dock="Bottom" >
                 <Button Name="Close" IsCancel="True" Height="22" Width="120" Margin="0, 20">Закрыть</Button>
             </GroupBox>
+            <GroupBox DockPanel.Dock="Top">
+                <StackPanel>
+                    <TextBlock Text="{Binding DictionaryTotal}" Height="22" Width="280" Margin="0, 10, 0, 10" />
+                    <Button Name="AddWordFromFileToDict" Content="Добавить слова из файла" Height="22" Width="220" Margin="0" HorizontalAlignment="Left"/>
+                </StackPanel>
+            </GroupBox>  
             <GroupBox DockPanel.Dock="Top" >
                 <StackPanel HorizontalAlignment="Left">
                     <TextBox Name="FileNameTextBlock" Text="{Binding SelectedFile}" IsReadOnly="True"
@@ -17,6 +23,7 @@
                     <Button Name="SelectFile" Content="Выбрать файл" Height="22" Width="120" Margin="0" HorizontalAlignment="Left"/>
                 </StackPanel>
             </GroupBox>
+          
             <GroupBox DockPanel.Dock="Top">
                 <DockPanel Margin="0,5">
                     <TextBlock DockPanel.Dock="Bottom" Background="AliceBlue" Text="{Binding Message}" Margin="0, 5"/>
