--- a/CrossWord/Forms/ShellView.xaml
+++ b/CrossWord/Forms/ShellView.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:crossWord="clr-namespace:CrossWord"
         mc:Ignorable="d"
         Title="ShellView" WindowState="Maximized">
     <DockPanel>
@@ -12,15 +13,30 @@
             </GroupBox>
             <GroupBox DockPanel.Dock="Top">
                 <StackPanel>
-                    <TextBlock Text="{Binding DictionaryTotal}" Height="22" Width="280" Margin="0, 10, 0, 10" />
-                    <Button Name="AddWordFromFileToDict" Content="Добавить слова из файла" Height="22" Width="220" Margin="0" HorizontalAlignment="Left"/>
+                    <ItemsControl ItemsSource="{Binding WordDictionaries}" Margin="0,10,0,0">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate DataType="crossWord:WordsDictVm">
+                                <DockPanel Margin="3">
+                                    <CheckBox IsChecked="{Binding IsSelected, Mode=TwoWay}" Content="{Binding Description}" Margin="0,1,0,0"/>
+                                    <TextBlock Text="{Binding Message}" Margin="15,0,0,0"/>
+                                </DockPanel>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+
+                    <TextBlock Text="{Binding DictionaryTotal}" Height="22" Width="280" Margin="0, 10, 0, 0" />
+                    <TextBlock Text="{Binding DictionaryRemark}" Height="22" Width="280" Margin="0, 0, 0, 0" />
+                    <TextBlock Text="{Binding SelectedCountMessage}" Height="22" Width="280" Margin="0, 0, 0, 0" />
+                    <Border BorderBrush="Gray" BorderThickness="0,1,0,0" Margin="0,0,0,10"/>
+                    <Button Name="AddWordFromFileToDict" Content="Добавить слова из файла" IsEnabled="False"
+                            Height="22" Width="220" Margin="0,0,0,5" HorizontalAlignment="Left"/>
                 </StackPanel>
             </GroupBox>  
             <GroupBox DockPanel.Dock="Top" >
                 <StackPanel HorizontalAlignment="Left">
                     <TextBox Name="FileNameTextBlock" Text="{Binding SelectedFile}" IsReadOnly="True"
-                                 Height="22" Width="280" Margin="0, 20, 0, 10" TextChanged="TextBox_TextChanged"/>
-                    <Button Name="SelectFile" Content="Выбрать файл" Height="22" Width="120" Margin="0" HorizontalAlignment="Left"/>
+                                 Height="22" Width="280" Margin="0, 10, 0, 10" TextChanged="TextBox_TextChanged"/>
+                    <Button Name="SelectFile" Content="Выбрать поле кроссворда" Height="22" Width="220" Margin="0,0,0,5" HorizontalAlignment="Left"/>
                 </StackPanel>
             </GroupBox>
           
@@ -33,7 +49,7 @@
                 </DockPanel>
             </GroupBox>
             <GroupBox DockPanel.Dock="Top">
-                <Button Name="DrawBoard" Content="Рисовать поле" Height="22" Width="120" Margin="0, 5"/>
+                <Button Name="DrawBoard" Content="Рисовать поле кроссворда" Height="22" Width="220" Margin="0, 5" HorizontalAlignment="Left"/>
             </GroupBox>
             <StackPanel></StackPanel>
         </DockPanel>
